--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "sequelize": "^6.6.4"
+    "sequelize": "^6.6.4",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
