--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "sequelize-cli": "^6.2.0"
   }
 }
