--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,8 @@
 PORT = 5000
 NODE_ENV = development
+DB_USER = root
+DB_HOST = localhost
+DB_PASSWORD = Talk_is_cheap
+DB_NAME = theknowntech
+DB_DIALECT = mysql
 DB_CONNECTION_URL = mysql://root:Talk_is_cheap@localhost:3306/theknowntech
